[package]
name = "web-memory"
version = "0.1.0"
authors = ["originbenntou <originbenntou8973@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.7", features = ["full"] }
tokio = { version = "1.10.1", features = ["macros", "rt-multi-thread"] }
tera = "1.10.0"
